--- a/fuchszunft-menningen/package.json
+++ b/fuchszunft-menningen/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ics": "^3.8.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
