--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "redirects": [
     { "source": "/aktuelles.htm", "destination": "/news", "permanent": true },
     { "source": "/kontakt.htm", "destination": "/kontakt", "permanent": true },
-    { "source": "/impressum.htm", "destination": "/impressum", "permanent": true }
+    { "source": "/impressum.htm", "destination": "/impressum", "permanent": true },
+    { "source": "/datenschutz.htm", "destination": "/datenschutz", "permanent": true }
   ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
