--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "ics": "^3.8.1",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "yet-another-react-lightbox": "^3.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
